--- a/settings/kitty/kitty.conf
+++ b/settings/kitty/kitty.conf
@@ -19,23 +19,69 @@ url_color #d65c0d
 #
 
 # Curser
-
+shell_integration no-cursor
 cursor_stop_blinking_after 100.0
-cursor #1cbd00
+#cursor #1cbd00
 #8fee96
 cursor_shape block
 term xterm-256color
-background_opacity 0.95
+background_opacity 0.85
 #
 
+# window
+#window_padding_width 0.3
+active_border_color #23ff18
+window_margin_width 1
+#
 
 # Shell
 
 shell /usr/bin/fish
 #
 
+##  Homebrew color shema
+#  background #000000
+#  foreground #00ff00
+cursor #23ff18
+#  selection_background #083905
+#  color0 #000000
+#  color8 #666666
+#  color1 #990000
+#  color9 #e50000
+#  color2 #00a600
+#  color10 #00d900
+#  color3 #999900
+#  color11 #e5e500
+#color4 #23ff18
+#  #0000b2
+#color12 #23ff18
+#0000ff
+#  color5 #b200b2
+#  color13 #e500e5
+#  color6 #00a6b2
+#  color14 #00e5e5
+#  color7 #bebebe
+#  color15 #e5e5e5
+#  selection_foreground #000000
 
-# commands
 
-path /home/martin/Dokumente/commands/
-#
+## Standart
+#color0  = black
+#color1  = red
+#color2  = green
+#color3  = yellow
+#color4  = blue
+#color5  = magenta
+#color6  = cyan
+#color7  = white
+#color8  = brightBlack
+#color9  = brightRed
+#color10 = brightGreen
+#color11 = brightYellow
+#color12 = brightBlue
+#color13 = brightMagenta
+#color14 = brightCyan
+#color15 = brightWhite
+ 
+
+
